--- a/OutboundCampaign.Api/OutboundCampaign.Api.csproj
+++ b/OutboundCampaign.Api/OutboundCampaign.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.Connect" Version="3.7.300" />
+    <PackageReference Include="AWSSDK.ConnectCampaignService" Version="3.7.300.5" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.7" />
   </ItemGroup>
 
